<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:backgroundTint="#BCFFFFFF"
    android:backgroundTintMode="src_atop"
    tools:context=".MenuActivity">

    <TextView
        android:id="@+id/menuTitleSubText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/menu_text_title_sub"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/menuTitleText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#6AAA00FF"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/menu_text_title"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menuTitleSubText" />

    <Button
        android:id="@+id/menuButtonPlay"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="#6AAA00FF"
        android:text="@string/menu_button_play"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menuTitleText" />

    <Button
        android:id="@+id/menuButtonOptions"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#6AAA00FF"
        android:text="@string/menu_button_options"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menuButtonPlay" />

    <Button
        android:id="@+id/menuButtonAbout"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#6AAA00FF"
        android:text="@string/menu_button_help"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menuButtonOptions" />
</androidx.constraintlayout.widget.ConstraintLayout>